# sat-from-scratch-rs

./: .gitignore  .pre-commit-config.yaml  .typos.toml  Cargo.toml  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benchmarks/: prime4.cnf  uf20-01.cnf  uf20-02.cnf  uf20-03.cnf  uf20-04.cnf  uf20-05.cnf  uf20-06.cnf
scripts/: generate_cnf.sh
src/: api.rs  common.rs  constants.rs  kernel.rs  lib.rs  main.rs  search.rs  solver.rs  utils.rs
src/solver/: inprocessing.rs  mod.rs  preprocessing.rs  search.rs
src/structures/: clause.rs  mod.rs  watch.rs
src/utils/: logger.rs
tests/: kernel_sat_test.rs  kernel_unsat_test.rs  solver_sat_test.rs
theme/: logic.css  math-config.html
