[package]
name = "easy-sat-rs"
version = "0.1.0"
edition = "2024"
authors = ["Virgil <virgiling7@gmail.com>"]
description = "A simple SAT solver in Rust"
license = "MIT"
repository = "https://github.com/virgil/easy-sat-rs"
keywords = ["sat", "solver", "rust"]
categories = ["science", "math", "logic"]

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
