[package]
name = "easy_sat_rs"
version = "0.1.0"
edition = "2024"
authors = ["Virgil <virgiling7@gmail.com>"]
description = "A simple SAT solver in Rust"
license = "MIT"
repository = "https://github.com/virgiling/sat-from-scratch-rs"
keywords = ["sat", "solver", "rust"]
categories = ["science", "math", "logic"]

[dependencies]
aquamarine = "0.6.0"
keyed_priority_queue = "0.4.2"
ordered-float = "5.3.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
rstest = "0.26.1"


[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
